--- a/MyDeque.vcxproj
+++ b/MyDeque.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{561FB548-C71A-49EE-AA10-4B7135602CB5}</ProjectGuid>
     <RootNamespace>OOP_LAB2_VER2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>MyDeque</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
